Import of DAVIDO/Bytes-Random-Secure-0.02 from CPAN.
gitpan-cpan-distribution: Bytes-Random-Secure
gitpan-cpan-version:      0.02
gitpan-cpan-path:         DAVIDO/Bytes-Random-Secure-0.02.tar.gz
gitpan-cpan-author:       DAVIDO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,7 +3,7 @@ abstract: 'Perl extension to generate cryptographically-secure'
 author:
   - 'David Oswald <davido@cpan.org>'
 build_requires:
-  Statistics::Test::RandomWalk: 0
+  ExtUtils::MakeMaker: 0
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
@@ -18,8 +18,9 @@ no_index:
     - t
     - inc
 requires:
+  Crypt::Random::Source: 0
   MIME::Base64: 0
-  Math::Random::Secure: 0
-  Mime::QuotedPrint: 0
+  MIME::QuotedPrint: 0
+  Math::Random::ISAAC: 0
   Test::More: 0
-version: 0.01
+version: 0.02
