--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120630'
+generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,10 +18,11 @@ no_index:
     - t
     - inc
 requires:
+  Carp: 0
   Crypt::Random::Source: 0
   MIME::Base64: 0
   MIME::QuotedPrint: 0
   Math::Random::ISAAC: 0
   Test::More: 0
   perl: 5.006000
-version: 0.09
+version: 0.10
