--- a/META.yml
+++ b/META.yml
@@ -3,7 +3,8 @@ abstract: 'Perl extension to generate cryptographically-secure'
 author:
   - 'David Oswald <davido@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 0
+  Test::More: 0.98
+  Test::Warn: 0
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
@@ -19,10 +20,9 @@ no_index:
     - inc
 requires:
   Carp: 0
-  Crypt::Random::Source: 0
+  Crypt::Random::Seed: 0
   MIME::Base64: 0
   MIME::QuotedPrint: 0
   Math::Random::ISAAC: 0
-  Test::More: 0
   perl: 5.006000
-version: 0.12
+version: 0.20
