Import of DAVIDO/Bytes-Random-Secure-0.21 from CPAN.
gitpan-cpan-distribution: Bytes-Random-Secure
gitpan-cpan-version:      0.21
gitpan-cpan-path:         DAVIDO/Bytes-Random-Secure-0.21.tar.gz
gitpan-cpan-author:       DAVIDO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -24,5 +24,6 @@ requires:
   MIME::Base64: 0
   MIME::QuotedPrint: 0
   Math::Random::ISAAC: 0
+  Scalar::Util: 0
   perl: 5.006000
-version: 0.20
+version: 0.21
